# nxmx

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: ci.yml  publish-to-pypi.yml
src/nxmx/: __init__.py
tests/: conftest.py  test_nxmx.py
